# soc-toolkit

./: .gitignore  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: __init__.py  base.py  detector.py  log_parser.py
config/: __init__.py  default.yaml  loader.py
correlators/: __init__.py  base.py  engine.py  rules.py
detectors/: __init__.py  allowlist.py  auth_success.py  base.py  brute_force.py  enumeration.py  password_spray.py  priv_esc.py
enrichers/: __init__.py  base.py  geoip.py
exporters/: __init__.py  base.py  bundle.py  html_report.py  json_export.py  markdown.py  timeline.py
models/: __init__.py  event.py  finding.py
parsers/: __init__.py  base.py  cef.py  csv_.py  json_.py  router.py  syslog.py  windows_evtx.py
samples/: auth.log.sample  events.cef.sample  events.json.sample  security.xml.sample
tests/: test_exporters.py  test_geoip.py  test_models.py
tests/correlators/: test_engine.py  test_rules.py
tests/detectors/: test_allowlist.py  test_auth_success.py  test_brute_force.py  test_enumeration.py  test_password_spray.py  test_priv_esc.py
tests/parsers/: test_cef.py  test_json.py  test_syslog.py  test_windows_evtx.py
