[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "soc-toolkit"
version     = "0.1.0"
description = "Log analysis and threat detection for security operations"
readme      = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
geoip = [
    "geoip2>=4.8",
]

[project.scripts]
soc-parse   = "soc_toolkit.cli.log_parser:main"
soc-detect  = "soc_toolkit.cli.detector:main"

[tool.pytest.ini_options]
testpaths    = ["soc_toolkit/tests"]
python_files = ["test_*.py"]
