[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "soc-toolkit"
version     = "0.1.0"
description = "Log analysis and threat detection for security operations"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
soc-parse  = "soc_toolkit.cli.log_parser:main"
soc-detect = "soc_toolkit.cli.detector:main"

[tool.setuptools]
packages = [
    "soc_toolkit",
    "soc_toolkit.models",
    "soc_toolkit.parsers",
    "soc_toolkit.detectors",
    "soc_toolkit.correlators",
    "soc_toolkit.exporters",
    "soc_toolkit.enrichers",
    "soc_toolkit.cli",
    "soc_toolkit.config",
    "soc_toolkit.samples",
]

[tool.setuptools.package-dir]
"soc_toolkit" = "."
"soc_toolkit.models"      = "models"
"soc_toolkit.parsers"     = "parsers"
"soc_toolkit.detectors"   = "detectors"
"soc_toolkit.correlators" = "correlators"
"soc_toolkit.exporters"   = "exporters"
"soc_toolkit.enrichers"   = "enrichers"
"soc_toolkit.cli"         = "cli"
"soc_toolkit.config"      = "config"
"soc_toolkit.samples"     = "samples"

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]